# passwordless-login

./: pyproject.toml
src/app_webui/: config.py  main.py
src/app_webui/templates/: index.html
src/passwordless/: __init__.py
src/passwordless_login/: main.py
src/passwordless_login/templates/: index.html
