[tool.poetry]
name = "passwordless-login"
version = "0.1.0"
description = ""
authors = ["Mihai Ionut Vilcu <ionutvmi@gmail.com>"]
readme = "README.md"
packages = [{include = "passwordless_login", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
start = "python src/passwordless_login/main.py"
